// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-item-document-blueprint should get multiple document blueprints by ID 1`] = `
[
  {
    "documentType": {
      "collection": null,
      "icon": "icon-home color-blue",
      "id": "a95360e8-ff04-40b1-8f46-7aa4b5983096",
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Blueprint",
  },
  {
    "documentType": {
      "collection": null,
      "icon": "icon-home color-blue",
      "id": "a95360e8-ff04-40b1-8f46-7aa4b5983096",
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Blueprint2",
  },
]
`;

exports[`get-item-document-blueprint should get no document blueprints for empty request 1`] = `[]`;

exports[`get-item-document-blueprint should get single document blueprint by ID 1`] = `
[
  {
    "documentType": {
      "collection": null,
      "icon": "icon-home color-blue",
      "id": "a95360e8-ff04-40b1-8f46-7aa4b5983096",
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Blueprint",
  },
]
`;
